--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+body{
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+.container{
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input[type="text"],select,input[type=number],input[type=submit]{
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type="submit"]{
+  /* background-color: #4caf5d; */
+  background-color: 	#006aff;
+  color: white;
+  border: none;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input[type="submit"]:hover{
+  /* background-color: #45a049; */
+  background-color: #0055ff;
+
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th,td{
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th{
+  /* background-color: #4caf50; */
+  background-color: #006aff;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.del{
+  background-color: rgb(255, 39, 39);
+  color: white;
+  height: 4vh;
+  width: 7vw;
+  border: none;
+  border-radius: 2px;
+  margin: 0;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
