--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-body{
+body {
   font-family: Arial, Helvetica, sans-serif;
-
 }
-.container{
+
+.container {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -11,7 +11,7 @@ body{
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-input[type="text"],select,input[type=number],input[type=submit]{
+input[type="text"], select, input[type=number], input[type=submit] {
   margin-bottom: 10px;
   width: 100%;
   padding: 8px;
@@ -20,38 +20,35 @@ input[type="text"],select,input[type=number],input[type=submit]{
   box-sizing: border-box;
 }
 
-input[type="submit"]{
-  /* background-color: #4caf5d; */
-  background-color: 	#006aff;
+input[type="submit"] {
+  background-color: #006aff;
   color: white;
   border: none;
   cursor: pointer;
 }
 
-input[type="submit"]:hover{
-  /* background-color: #45a049; */
+input[type="submit"]:hover {
   background-color: #0055ff;
-
 }
 
-table{
+table {
   width: 100%;
   border-collapse: collapse;
 }
 
-th,td{
+th, td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
 }
 
-th{
-  /* background-color: #4caf50; */
+th {
   background-color: #006aff;
+
   color: white;
 }
 
-.del{
+.del {
   background-color: rgb(255, 39, 39);
   color: white;
   height: 4vh;
@@ -59,5 +56,112 @@ th{
   border: none;
   border-radius: 2px;
   margin: 0;
+}
 
+/* Responsive Styles */
+@media (max-width: 768px) {
+ .container {
+    padding: 10px;
+  }
+
+  input[type="text"], select, input[type=number], input[type=submit] {
+    font-size: 14px;
+  }
+
+  .del {
+    height: 4vh;
+    width: 8vw;
+    font-size: 13px;
+  }  
+}
+
+
+@media (max-width: 605px) {
+
+   .del {
+     height: 4vh;
+     width: 9vw;
+     font-size: 13px;
+   }  
+ }
+
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 5px;
+    margin: 20px;
+  }
+
+  input[type="text"], select, input[type=number], input[type=submit] {
+    font-size: 12px;
+  }
+  
+  th{
+    font-size: 15px;
+  }
+  .del {
+    height: 4vh;
+    width: 11vw;
+    font-size: 12px;
+  }   
+
+  .total{
+    font-size: 23px;
+  }
+}
+
+
+
+@media (max-width: 415px) {
+
+  .container {
+    padding: 5px;
+    margin: 1px;
+  }
+  .del {
+    height: 4vh;
+    width: 14vw;
+    font-size: 13px;
+  }  
+  .table{
+    width:99%
+  }
+}
+
+@media (max-width: 415px) {
+
+  .container {
+    padding: 5px;
+    margin: 0px;
+  }
+  .del {
+    height: 4vh;
+    width: 14vw;
+    font-size: 13px;
+  }  
+  .table{
+    width:100%
+  }
+}
+
+
+@media screen and (max-width: 330px) {
+  .container {
+    padding: 5px;
+  }
+
+  input[type="text"], select, input[type=number], input[type=submit] {
+    font-size: 12px;
+  }
+  
+  th{
+    font-size: 13px;
+  }
+  td{
+    font-size: 13px;
+  }
+ .del {
+    height: 2.5vh;
+    width: 13vw;
+    font-size: 10px;
+  }  
 }
