--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,18 @@ h3{
   margin-top:40px;
 }
 
+@media screen and (-webkit-min-device-pixel-ratio:0) { 
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
+
 input[type="text"], select, input[type=number], input[type=submit] {
   margin-bottom: 10px;
+  height: 6vh;
+  font-size: larger;
   width: 100%;
   padding: 8px;
   border: 1px solid #ccc;
@@ -92,6 +102,15 @@ th {
    }  
  }
 
+ @media (max-width: 550px) {
+
+  .del {
+    height: 4vh;
+    width: 10vw;
+    font-size: 13px;
+  }  
+}
+
 @media screen and (max-width: 480px) {
   .container {
     padding: 5px;
@@ -155,6 +174,12 @@ th {
     width: 14vw;
     font-size: 12px;
   }  
+
+  .container {
+    padding: 5px;
+    width:100%;
+    height: 95vh;
+  }
 }
 
 @media screen and (max-width: 330px) {
